feat: status-pages api
